fix: layout overflow error (#7648)

--- a/config-ui/src/index.css
+++ b/config-ui/src/index.css
@@ -66,3 +66,7 @@ p {
   font-size: 12px;
   color: #94959f;
 }
+
+#root {
+  height: 100vh;
+}
